--- a/.hintrc
+++ b/.hintrc
@@ -3,7 +3,8 @@
     "development"
   ],
   "hints": {
-    "axe/forms": "off"
+    "axe/forms": "off",
+    "disown-opener": "off"
   },
   "browserslist": [
     "defaults",
